--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-bootstrap": "^0.32.28",
     "@types/react-dom": "^17.0.0",
     "bootstrap": "^5.1.3",
+    "infinite-react-carousel": "^1.2.11",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
